--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t pseudocoderkim/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run pseudocoderkim/docker-react npm run test -- --coverage
+  - docker run --env CI=true pseudocoderkim/docker-react npm test -- --coverage
